--- a/css/style.css
+++ b/css/style.css
@@ -5,33 +5,64 @@
     box-sizing: border-box;
 }   
 
-.header_container video {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+h1, h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-.header_container .capa {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.288);
-    mix-blend-mode: overlay;
-}
-
 .eslogan{
+    color: #ffffffb9;
+    background-color: rgba(0, 0, 0, 0.473);
     position: absolute;
     top: 50%;
+    left: 15%;
+
+}
+.stock{
+    padding: 2%;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.90); */
+}
+
+.stock h2{
+    padding: 1rem;
+    font-size: 40px;
+    text-align: center;
+    justify-content: center;
 }
 
 .stock_container{
-    padding-top: 50%;
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    display: grid;
+    gap: 5%;
+    grid-template-columns: repeat(3, 1fr);
     
-    /* display: grid;
-    grid-template-columns: repeat(3, 1fr); */
-    display: flex;
+    
 }
 
+.stock_container .card{
+    margin: 5%;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
+}
+
+.card-body{
+    text-align: center;
+}
+
+.data{
+    width: 100%;
+    padding: 1%;
+    display: flex;
+    background-color: rgb(18, 18, 18); 
+}
+
+.presentacion{
+    padding: 5% 3% 0% 2%;
+    text-align: center;
+    color: #fff;
+}
+
+.ubicacion h5{
+text-align: center;
+color:#fff;
+padding: 1%;
+}
