--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,37 @@ text-align: center;
 color:#fff;
 padding: 1%;
 }
+
+.exp_container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+    padding: 2%;
+    text-align: center;
+    
+}
+
+.opinion_card{
+    width: 350px;
+    background-color: #ebebeb;
+    border-radius: 10px;
+}
+
+.opinion_bubble{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+footer .container-fluid{
+    height: 10em;
+    display: flex;
+    flex-direction: column;
+}
+
+footer .navbar-nav{
+   display: inline-block;\
+   
+   
+}
+
