--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ h1, h2{
 .eslogan{
     color: #ffffffb9;
     background-color: rgba(0, 0, 0, 0.473);
+    z-index: 1;
     position: absolute;
     top: 50%;
     left: 15%;
@@ -20,8 +21,7 @@ h1, h2{
     padding: 2%;
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.90); */
-}
+    }
 
 .stock h2{
     padding: 1rem;
@@ -39,11 +39,13 @@ h1, h2{
     
 }
 
-.stock_container .card{
-    margin: 5%;
+.card{
+    margin: 5%; 
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
 }
-
+/* .card-img-top{
+    width: 70%
+} */
 .card-body{
     text-align: center;
 }
@@ -56,15 +58,30 @@ h1, h2{
 }
 
 .presentacion{
-    padding: 5% 3% 0% 2%;
+    padding: 0% 3% 0% 2%;
     text-align: center;
     color: #fff;
+}
+
+.presentacion h5{
+    padding: 1%;
+    padding-bottom: 5%;
+}
+
+.ubicacion{
+    padding-right: 1%;
+    padding-bottom: 1%;
 }
 
 .ubicacion h5{
 text-align: center;
 color:#fff;
 padding: 1%;
+}
+
+.experiencias h5{
+    text-align: center;
+    padding-top: 1%;
 }
 
 .exp_container{
@@ -86,17 +103,62 @@ padding: 1%;
     display: flex;
     width: 100%;
     flex-direction: column;
+
 }
 
 footer .container-fluid{
     height: 10em;
-    display: flex;
-    flex-direction: column;
+    text-align: center;
+    
+/*     flex-direction: column; */
+}
+
+footer .navbar-brand{
+    background-color: red;
+    
+
 }
 
 footer .navbar-nav{
-   display: inline-block;\
-   
-   
+   display: inline-block;
 }
 
+footer .d-flex{
+    flex-direction:  ;
+}
+
+
+@media (max-width:992px)
+{
+    .eslogan h1{
+        top: 20%;
+        font-size: 1.5rem;
+    }
+
+    .stock_container{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        overflow-x: scroll;
+    }
+
+    .data{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .mapa{
+        width: 400px;
+        height: 200px;
+    }
+
+    .exp_container{
+        grid-template-columns: repeat(6, 1fr);
+        overflow-x: scroll;
+        gap: 1rem;
+    }
+}
+
+@media (max-width:576px)
+{
+
+}
