--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h1, h2 , h3, h4, h5 , h6{
     top: 50%;
     left: 15%;
     display: flex;
+    font-size: 1.5rem;
 }
 .stock{
     padding: 2%;
@@ -78,6 +79,7 @@ color:#fff;
 padding: 1%;
 }
 
+
 .experiencias h5{
     text-align: center;
     padding-top: 1%;
@@ -110,35 +112,57 @@ padding: 1%;
 /* Catalogo */
 .catalogo{
     display: grid;
-    grid-template-columns: repeat(2, 0.7fr);
-    grid-template-rows: 83% 40px repeat(3, 100px) 60px;
-    /* grid-template-areas:
-    "barra_lateral vehiculos"
-    "barra_lateral vehiculos"
-    "barra_lateral form"; */
+    grid-template-columns: 13% 80%;
+    grid-template-rows: 0fr auto 0.1fr;
+    grid-template-areas: 
+    "barra vehiculos"
+    "barra heviculos"
+    "barra numeracion";
 }
 
 .barra_lateral{
-    background-color: navajowhite;
-    width: 70%;
+    margin-top: 50%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap; 
+    grid-area: barra;   
+    text-align: center;
+}
+
+
+.categoria, .estado, .financiacion{    
+    padding: 3%;
+    margin: 0.7rem;
+}
+
+.vehiculos{
+    grid-area: vehiculos;
     
 }
 
 .vehiculos h1{
     text-align: center;
     margin-top: 2%;
+    margin-left: 5%;
 }
 
 .vehiculos_container{
     width: 100%;
+    height: 100%;
+    margin:1%;
+    margin-left: 5%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1%;
 
 }
 
 .vehiculos_container .card{
     margin: 1rem ;
+}
+
+.numeracion{
+    margin-left: 40%;
+    grid-area: numeracion;
 }
 
 
@@ -152,7 +176,7 @@ footer .container-fluid{
 }
 
 footer .navbar-brand{
-    background-color: red;
+    background-color:
     
 
 }
@@ -165,17 +189,21 @@ footer .d-flex{
     flex-direction:  ;
 }
 
+@media (max-width:1100px)
+{
+    .vehiculos_container{
+        grid-template-columns: repeat(2 , 1fr);
+    }
+}
 
 @media (max-width:992px)
 {
     .eslogan h1{
         top: 20%;
-        font-size: 1.5rem;
+        /* font-size: 1.5rem; */
     }
 
     .stock_container{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
         overflow-x: scroll;
         gap: 2%;
     }
@@ -193,18 +221,24 @@ footer .d-flex{
     .exp_container{
         grid-template-columns: repeat(6, 1fr);
         overflow-x: scroll;
-        gap: 1rem;
+        gap: 1rem; 
     }
 }
 
 @media (max-width:576px)
 {
     .eslogan h1{
-        font-size: 0.5rem;
+        top: 20%;
+
+       /*  font-size: 0.8rem; */
     }
 
     .stock_container{
         gap: 3%;
     }
 
+    .mapa{
+        width: 250px;
+        height: 100px;
+    }
 }
