--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@ h1, h2 , h3, h4, h5 , h6{
 }
 
 .ubicacion h5{
-text-align: center;
-color:#fff;
-padding: 1%;
+    text-align: center;
+    color:#fff;
+    padding: 1%;
 }
 
 
@@ -137,7 +137,6 @@ padding: 1%;
 
 .vehiculos{
     grid-area: vehiculos;
-    
 }
 
 .vehiculos h1{
@@ -188,6 +187,58 @@ footer .navbar-nav{
 footer .d-flex{
     flex-direction:  ;
 }
+
+
+
+/* footer 2 */
+
+footer {
+    background-color: rgb(18, 18, 18);
+}
+
+.footer a, .footer li{
+    text-decoration: none;
+    list-style: none;
+}
+
+.footer {
+    padding: 1rem 5%;
+    width: 100%;
+    height: 230px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+
+}
+
+.footer h2 {
+    font-size: 1.4rem;
+}
+
+.footer ul{
+    padding: 10px 0;
+    width: 160px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.footer .contacto ul {
+    height: 90px;
+}
+
+.footer ul .link_item a {
+    color: #fff;
+    display: flex;
+    align-items: center;
+}
+
+.link_item a i.bx {
+    margin-right: 6px;
+    font-size: 1.2rem;
+}
+
 
 @media (max-width:1100px)
 {
