--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ h1, h2 , h3, h4, h5 , h6{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 /* Inicio */
 
 .eslogan{
@@ -79,7 +83,6 @@ h1, h2 , h3, h4, h5 , h6{
     padding: 1%;
 }
 
-
 .experiencias h5{
     text-align: center;
     padding-top: 1%;
@@ -110,6 +113,7 @@ h1, h2 , h3, h4, h5 , h6{
 
 
 /* Catalogo */
+
 .catalogo{
     display: grid;
     grid-template-columns: 13% 80%;
@@ -118,6 +122,10 @@ h1, h2 , h3, h4, h5 , h6{
     "barra vehiculos"
     "barra heviculos"
     "barra numeracion";
+}
+
+#check_filter, .icono label{
+    display: none;
 }
 
 .barra_lateral{
@@ -129,6 +137,9 @@ h1, h2 , h3, h4, h5 , h6{
     text-align: center;
 }
 
+.filtros{   
+    margin: 10%;
+}
 
 .categoria, .estado, .financiacion{    
     padding: 3%;
@@ -167,7 +178,7 @@ h1, h2 , h3, h4, h5 , h6{
 
 
 
-/* footer 2 */
+/* footer */
 
 footer {
     background-color: rgb(18, 18, 18);
@@ -217,18 +228,25 @@ footer {
 }
 
 
-@media (max-width:1100px)
+@media (max-width:1130px)
 {
     .vehiculos_container{
         grid-template-columns: repeat(2 , 1fr);
+        margin-left: 15%;
+    }
+    .exp_container{
+        grid-template-columns: repeat(6, 1fr);
+        overflow-x: scroll;
+        gap: 1rem; 
     }
 }
+
 
 @media (max-width:992px)
 {
     .eslogan h1{
         top: 20%;
-        /* font-size: 1.5rem; */
+        
     }
 
     .stock_container{
@@ -246,11 +264,26 @@ footer {
         height: 200px;
     }
 
-    .exp_container{
-        grid-template-columns: repeat(6, 1fr);
-        overflow-x: scroll;
-        gap: 1rem; 
+    
+}
+
+@media (max-width:890px)
+{
+    .icono label{
+        display: block;
     }
+    
+    .filter{
+        display: none;
+    }
+
+    #check_filter:checked~.filter{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+    }
+
+
 }
 
 @media (max-width:576px)
@@ -258,7 +291,6 @@ footer {
     .eslogan h1{
         top: 20%;
 
-       /*  font-size: 0.8rem; */
     }
 
     .stock_container{
