--- a/css/style.css
+++ b/css/style.css
@@ -1,385 +1,301 @@
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-}   
-
-h1, h2 , h3, h4, h5 , h6{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
 /* Index*/
-
-.eslogan{
-    color: #ffffffb9;
-    background-color: rgba(0, 0, 0, 0.473);
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    left: 15%;
-    display: flex;
-    font-size: 1.5rem;
-}
-.stock{
-    padding: 2%;
-    width: 100%;
-    height: 100%;
-    }
-
-.stock h2{
-    padding: 1rem;
-    font-size: 40px;
-    text-align: center;
-    justify-content: center;
+.eslogan {
+  color: rgba(255, 255, 255, 0.7254901961);
+  background-color: rgba(0, 0, 0, 0.473);
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 15%; 
+  display: flex;
+  font-size: 1.5rem;
 }
 
-.stock_container{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-       
+.stock {
+  padding: 2%;
+  width: 100%;
+  height: 100%;
+}
+.stock h2 {
+  padding: 1rem;
+  font-size: 40px;
+  text-align: center;
+  justify-content: center;
+}
+.stock .stock_container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.stock .stock_container .card {
+  margin: 10%;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
+}
+.stock .stock_container .card .card-body {
+  text-align: center;
 }
 
-.card{
-    margin: 10%; 
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
+.data {
+  width: 100%;
+  padding: 1%;
+  display: flex;
+  background-color: rgb(18, 18, 18);
+}
+.data .presentacion {
+  padding: 0% 3% 0% 2%;
+  text-align: center;
+  color: #fff;
+}
+.data .presentacion h5 {
+  padding: 1%;
+  padding-bottom: 5%;
+}
+.data .ubicacion {
+  padding-right: 1%;
+  padding-bottom: 1%;
+}
+.data .ubicacion h5 {
+  text-align: center;
+  color: #fff;
+  padding: 1%;
 }
 
-.card-body{
-    text-align: center;
+.experiencias h5 {
+  text-align: center;
+  padding-top: 1%;
 }
-
-.data{
-    width: 100%;
-    padding: 1%;
-    display: flex;
-    background-color: rgb(18, 18, 18); 
+.experiencias .exp_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 2%;
+  text-align: center;
 }
-
-.presentacion{
-    padding: 0% 3% 0% 2%;
-    text-align: center;
-    color: #fff;
+.experiencias .exp_container .opinion_card {
+  width: 350px;
+  background-color: #ebebeb;
+  border-radius: 10px;
+  padding: 2%;
 }
-
-.presentacion h5{
-    padding: 1%;
-    padding-bottom: 5%;
+.experiencias .exp_container .opinion_card .opinion_bubble {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
 }
-
-.ubicacion{
-    padding-right: 1%;
-    padding-bottom: 1%;
-}
-
-.ubicacion h5{
-    text-align: center;
-    color:#fff;
-    padding: 1%;
-}
-
-.experiencias h5{
-    text-align: center;
-    padding-top: 1%;
-}
-
-.exp_container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
-    padding: 2%;
-    text-align: center;
-    
-}
-
-.opinion_card{
-    width: 350px;
-    background-color: #ebebeb;
-    border-radius: 10px;
-    padding: 2%;
-}
-
-.opinion_bubble{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-
-}
-
 
 /* Catalogo */
-
-.catalogo{
-    display: grid;
-    grid-template-columns: 13% 80%;
-    grid-template-rows: 0fr auto 0.1fr;
-    grid-template-areas: 
-    "barra vehiculos"
-    "barra heviculos"
-    "barra numeracion";
+.catalogo {
+  display: grid;
+  grid-template-columns: 13% 80%;
+  grid-template-rows: 0fr auto 0.1fr;
+  grid-template-areas: "barra vehiculos" "barra heviculos" "barra numeracion";
 }
-
-#check_filter, .icono label{
-    display: none;
+.catalogo .barra_lateral {
+  margin-top: 50%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  grid-area: barra;
+  text-align: center;
 }
-
-.barra_lateral{
-    margin-top: 50%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap; 
-    grid-area: barra;   
-    text-align: center;
+.catalogo .barra_lateral .filtros {
+  margin: 10%;
 }
-
-.filtros{   
-    margin: 10%;
+.catalogo .barra_lateral .filtros #check_filter, .catalogo .barra_lateral .filtros .icono label {
+  display: none;
 }
-
-.categoria, .estado, .financiacion{    
-    padding: 3%;
-    margin: 0.7rem;
+.catalogo .barra_lateral .filtros .categoria, .catalogo .barra_lateral .filtros .estado, .catalogo .barra_lateral .filtros .financiacion, .catalogo .barra_lateral .filtros .combustible, .catalogo .barra_lateral .filtros .traccion {
+  padding: 3%;
+  margin: 0.7rem;
 }
-
-.vehiculos{
-    grid-area: vehiculos;
+.catalogo .vehiculos {
+  grid-area: vehiculos;
 }
-
-.vehiculos h1{
-    text-align: center;
-    margin-top: 2%;
-    margin-left: 5%;
+.catalogo .vehiculos h1 {
+  text-align: center;
+  margin-top: 2%;
+  margin-left: 5%;
 }
-
-.vehiculos_container{
-    width: 100%;
-    height: 100%;
-    margin:1%;
-    margin-left: 5%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-
+.catalogo .vehiculos .vehiculos_container {
+  width: 100%;
+  height: 100%;
+  margin: 1%;
+  margin-left: 5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-
-.vehiculos_container .card{
-    margin: 1rem ;
+.catalogo .vehiculos .vehiculos_container .card {
+  margin: 1rem;
 }
-
-.numeracion{
-    margin-left: 40%;
-    grid-area: numeracion;
-    margin-bottom: 14%;
+.catalogo .numeracion {
+  margin-left: 40%;
+  grid-area: numeracion;
+  margin-bottom: 14%;
 }
 
 /* Contacto */
-
-.info{
-    display: flex;
-
+.info {
+  display: flex;
+}
+.info .ubicacion {
+  width: 100%;
+  text-align: center;
+  padding: 1%;
+  margin: 1%;
+}
+.info .ubicacion h2, .info .ubicacion h4 {
+  margin: 3%;
+}
+.info .form {
+  width: 70%;
+  text-align: center;
+  margin: 5%;
+  margin-top: 3%;
+}
+.info .form h2 {
+  padding: 1%;
+}
+.info .form .form-floating {
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
+}
+.info .btn {
+  margin: 2%;
 }
 
-.info .ubicacion{
-    left: ;
-    width: 100%;
-    text-align: center;
-    padding: 1%;
-    margin: 1%;
-}
-
-.info .ubicacion h2, .ubicacion h4{
-    margin: 3%;
-}
-
-.form{
-    width: 70%;
-    text-align: center;
-    margin: 5%;
-    margin-top: 3% ;
-}
-
-.form h2{
-    padding: 1%;
-}
-
-.form-floating{
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
-   
-}
-
-.form .btn{
-    margin: 2%;
-
-}
 /* footer */
-
-footer {
-    background-color: rgb(18, 18, 18);
-}
-
-.footer a, .footer li{
-    text-decoration: none;
-    list-style: none;
-}
-
 .footer {
-    padding: 1rem 5%;
-    width: 100%;
-    height: 230px;
-    display: flex;
-    justify-content: space-between;
-    color: #fff;
-
+  background-color: rgb(18, 18, 18);
+  padding: 1rem 5%;
+  width: 100%;
+  height: 230px;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
 }
-
 .footer h2 {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
+}
+.footer ul {
+  padding: 10px 0;
+  width: 160px;
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.footer ul li {
+  text-decoration: none;
+  list-style: none;
+}
+.footer ul .link_item a {
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+.footer ul .link_item a i .bx {
+  margin-right: 6px;
+  font-size: 1.2rem;
+}
+.footer .contacto ul {
+  height: 90px;
 }
 
-.footer ul{
-    padding: 10px 0;
-    width: 160px;
-    height: 160px;
+@media (max-width: 1130px) {
+  .vehiculos_container {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 15%;
+  }
+  .exp_container {
+    grid-template-columns: repeat(6, 1fr);
+    overflow-x: scroll;
+    gap: 1rem;
+  }
+}
+@media (max-width: 992px) {
+  .eslogan h1 {
+    top: 20%;
+  }
+  .stock_container {
+    overflow-x: scroll;
+    gap: 2%;
+  }
+  .data {
+    flex-direction: column;
+    text-align: center;
+  }
+  .mapa {
+    width: 400px;
+    height: 200px;
+  }
+}
+@media (max-width: 890px) {
+  .icono label {
+    display: block;
+  }
+  .icono label i.bx {
+    font-size: 3rem;
+  }
+  .filter {
+    display: none;
+  }
+  #check_filter:checked ~ .filter {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+  }
+  .vehiculos {
+    margin-top: 5%;
+  }
+  .info {
+    flex-direction: column;
+  }
+  .form {
+    margin-left: 10%;
+    width: 80%;
+  }
+}
+@media (max-width: 768px) {
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .footer ul {
+    margin: 0;
+  }
+}
+@media (max-width: 576px) {
+  .eslogan h1 {
+    top: 20%;
+  }
+  .stock_container {
+    gap: 3%;
+  }
+  .mapa {
+    width: 250px;
+    height: 100px;
+  }
+  .contacto ul .link_item {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+  }
+  .contacto .d-flex {
+    flex-direction: column;
+    width: 60%;
+  }
 }
 
-.footer .contacto ul {
-    height: 90px;
-}
-
-.footer ul .link_item a {
-    color: #fff;
-    display: flex;
-    align-items: center;
-}
-
-.link_item a i.bx {
-    margin-right: 6px;
-    font-size: 1.2rem;
-}
-
-
-@media (max-width:1130px)
-{
-    .vehiculos_container{
-        grid-template-columns: repeat(2 , 1fr);
-        margin-left: 15%;
-    }
-    .exp_container{
-        grid-template-columns: repeat(6, 1fr);
-        overflow-x: scroll;
-        gap: 1rem; 
-    }
-}
-
-
-@media (max-width:992px)
-{
-    .eslogan h1{
-        top: 20%;
-        
-    }
-
-    .stock_container{
-        overflow-x: scroll;
-        gap: 2%;
-    }
-
-    .data{
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .mapa{
-        width: 400px;
-        height: 200px;
-    }
-
-    
-}
-
-@media (max-width:890px)
-{
-    .icono label{
-        display: block;
-
-    }
-    
-    .icono label i.bx {
-    
-        font-size: 3rem;
-    }
-
-    .filter{
-        display: none;
-    }
-
-    #check_filter:checked~.filter{
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-    }
-
-    .vehiculos{
-        margin-top: 5% ;
-    }
-
-    .info{
-        flex-direction: column;
-    }
-
-    .form{
-        margin-left: 10%;
-        width: 80%;
-    }
-}
-
-@media (max-width:768px)
-{
-    .footer{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-    }
-
-    .footer ul{
-        
-        margin: 0;
-    }
-
-    
-}
-
-@media (max-width:576px)
-{
-    .eslogan h1{
-        top: 20%;
-
-    }
-
-    .stock_container{
-        gap: 3%;
-    }
-
-    .mapa{
-        width: 250px;
-        height: 100px;
-    }
-
-    .contacto ul .link_item{
-        display: flex;
-        flex-direction: column;
-
-    }
-
-    .contacto .d-flex{
-        flex-direction: column;
-        width: 60%;
-    }
-}
+/*# sourceMappingURL=style.css.map */
