--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "../scss/reset";
 @import "../scss/variables";
 
+
 h1, h2 , h3, h4, h5 , h6{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -10,17 +11,79 @@ body{
 }
 
 
-/* Index*/
+/* Navegacion */
+
+#checkbox{
+    display: none;
+}
+
+#checkbox:checked ~ .menu_nav{
+    display: none;
+}
+
+.menu{
+    background-color: #fff;
+    height: 3.5rem;
+    display: flex;
+    
+    .menu_check{
+
+
+        label{
+        i{
+            
+            .bx{
+                font-size: 2rem;
+            }
+        }
+        }
+
+        span{
+            font-size: 2.1rem;
+
+        }
+    }
+
+    
+    .menu_nav{
+
+        display: flex;
+        padding: 1%;
+        font-size: 1.1rem;
+        margin-left: 30rem;
+
+        .nav_item{        
+                   
+            margin: 0 0.7rem;
+            list-style: none;
+            
+            :hover {
+                background-color: #84B868;                
+            }       
+
+            a{
+                border-radius: 0.8rem;
+                text-decoration: none;  
+                color: black;  
+                padding: 5% 8%;
+            }
+        }
+    }
+}
+
+/*Pagina de inicio*/
 
 .eslogan{
     color: #ffffffb9;
     background-color: rgba(0, 0, 0, 0.473);
     z-index: 1;
     position: absolute;
-    top: 50%;
-    left: 15%;
+    top: 47%;
+    left: 16%;
     display: flex;
     font-size: 1.5rem;
+    border-radius: 0.8rem;
+    padding: 1%;
 }
 
 .stock{
@@ -30,7 +93,7 @@ body{
     
     h2{
         padding: 1rem;
-        font-size: 40px;
+        font-size: 2.5rem;
         text-align: center;
         justify-content: center;
     }
@@ -38,20 +101,32 @@ body{
     .stock_container{
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
      
-        .card{
-            margin: 10%; 
-            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.35);
+        .stock_card{
+            width: 18rem ;
+            background-color:white ;
+            border-radius: 1rem;
+            text-align: center;
+            border: solid 1px rgb(0, 0, 0);
 
-            .card-body{
-                text-align: center;
+            h3{
             }
-            
+
+            .card_img{
+                width: 100%;
+                border-radius: 1rem;
+            }
+
+            p{
+                background-color: #fff;
+            }
         }
     }
 
 }
+
+/* Informacion de la concesionaria */
 
 .data{
     width: 100%;
@@ -82,6 +157,8 @@ body{
     }
 }
 
+/* Experiencia de clientes */
+
 .experiencias{
 
     h5{
@@ -94,25 +171,29 @@ body{
         grid-template-columns: repeat(3,1fr);
         gap: 2rem;
         padding: 2%;
+        margin: 0 0 0 1%;
         text-align: center;
         
         .opinion_card{
             width: 350px;
             background-color: #ebebeb;
             border-radius: 10px;
-            padding: 2%;
+            padding: 1%;
 
             .opinion_bubble{
                 display: flex;
                 width: 100%;
                 flex-direction: column;
+            }
             
+            .opinion_happy{
+             color: #84B868;       
             }
         }
     }
 }
 
-/* Catalogo */
+/*Pagina de catalogo */
 
 .catalogo{
     display: grid;
@@ -122,6 +203,8 @@ body{
     "barra vehiculos"
     "barra heviculos"
     "barra numeracion";
+
+    /* Barra lateral de filtros */
 
     .barra_lateral{
         margin-top: 50%;
@@ -134,16 +217,24 @@ body{
         .filtros{   
             margin: 10%;
         
-            #check_filter, .icono label{
+            #check_filter{
                 display: none;
             }
- 
-            .categoria, .estado, .financiacion, .combustible, .traccion{    
-                padding: 3%;
-                margin: 0.7rem;
+
+            #check_filter:checked ~ .filter{
+                display: none;
+            }
+            
+            .filter{
+                .categoria, .estado, .financiacion, .combustible, .traccion{    
+                    padding: 3%;
+                    margin: 0.7rem;
+                }
             }
         }
     }
+
+/* Grilla de vehiculos */
 
     .vehiculos{
         grid-area: vehiculos;
@@ -169,16 +260,19 @@ body{
         }
     }
 
+    /* Pie numerado de paginas */
+
     .numeracion{
-        margin-left: 40%;
         grid-area: numeracion;
-        margin-bottom: 14%;
+        margin-bottom: 2%;
+        margin-left: 35%;
     }
 }
 
-/* Contacto */
+/*Pagina de contacto */
 
 .info{
+
     display: flex;
 
     .ubicacion{
@@ -220,51 +314,62 @@ body{
 
 .footer {
     background-color: rgb(18, 18, 18);
-    padding: 1rem 5%;
+    padding: 1% 5%;
     width: 100%;
-    height: 230px;
+    height: 13rem;
     display: flex;
     justify-content: space-between;
     color: #fff;
 
-    h2 {
-        font-size: 1.4rem;
-    }
-
-    ul{
-        padding: 10px 0;
-        width: 160px;
-        height: 160px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-
-        li{
-            text-decoration: none;
-            list-style: none;
+    .links, .redes, .contact{
+        
+        h2 {
+            font-size: 1.6rem;
+            padding: 0% 0% ;
         }
 
-        .link_item {
+        ul{
+            padding: 0;
+            width: 160px;
+            height: 90px;;
+            display: flex;
+            flex-direction: column;
 
-            a {
-                color: #fff;
-                display: flex;
-                align-items: center;
+            .link_item {
 
-                i{
+                list-style: none;
+                
+                a {
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    
+                    i {
+                        color: #84B868;
+                        padding: 3%;
 
-                .bx {
-                    margin-right: 6px;
-                    font-size: 1.2rem;
-                    }
-                }   
+                    .bx {
+    
+                        margin-right: 6px;
+                        font-size: 1.2rem;
+                        }
+                    }   
+                }
             }
+        
+        }
+
+    }
+
+    .redes{
+        ul{
+            
         }
     }
 
     .contacto {
         ul {
-        height: 90px;
         }
     }
 }
