--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -14,11 +14,12 @@
 
 @media (max-width:992px)
 {
-    .eslogan h1{
+    .eslogan {
+        h1{
         top: 20%;
         
+        }
     }
-
     .stock_container{
         overflow-x: scroll;
         gap: 2%;
